--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,8 +18,7 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
-  missing_dso_whitelist:
-    - '*/R.dll'                  # [win]
+  skip: true  # [win]
 
 requirements:
   build:
