--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,11 +16,14 @@ build:
   rpaths:
     - lib/R/lib/
     - lib/
-  # Checking windows to see if it passes. Uncomment the line if it fails.
-  # skip: true  # [win]
+  missing_dso_whitelist:
+    - '*/R.dll'        # [win]
+    - '*/Rblas.dll'    # [win]
+    - '*/Rlapack.dll'  # [win]
 
 requirements:
   build:
+    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
     - {{ compiler('c') }}        # [not win]
     - {{ stdlib("c") }}          # [not win]
     - {{ compiler('m2w64_c') }}  # [win]
@@ -30,7 +33,6 @@ requirements:
     - {{ posix }}sed             # [win]
     - {{ posix }}coreutils       # [win]
     - {{ posix }}zip             # [win]
-    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
   host:
     - r-base
     - r-matrix
