--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,27 +36,29 @@ requirements:
   host:
     - r-base
     - r-matrix
-    - r-rdpack >=2.6
-    - r-ergm >=4.6.0
-    - r-glue >=1.7.0
-    - r-network >=1.18.2
-    - r-purrr >=1.0.2
-    - r-rlang >=1.1.3
-    - r-rle >=0.9.2
-    - r-statnet.common >=4.9.0
-    - r-tibble >=3.2.1
+    - r-rdpack >=2.6.4
+    - r-ergm >=4.9.0
+    - r-glue >=1.8.0
+    - r-network >=1.19.0
+    - r-networklite >=1.1.0
+    - r-purrr >=1.0.4
+    - r-rlang >=1.1.6
+    - r-rle >=0.10.0
+    - r-statnet.common >=4.12.0
+    - r-tibble >=3.3.0
   run:
     - r-base
     - r-matrix
-    - r-rdpack >=2.6
-    - r-ergm >=4.6.0
-    - r-glue >=1.7.0
-    - r-network >=1.18.2
-    - r-purrr >=1.0.2
-    - r-rlang >=1.1.3
-    - r-rle >=0.9.2
-    - r-statnet.common >=4.9.0
-    - r-tibble >=3.2.1
+    - r-rdpack >=2.6.4
+    - r-ergm >=4.9.0
+    - r-glue >=1.8.0
+    - r-network >=1.19.0
+    - r-networklite >=1.1.0
+    - r-purrr >=1.0.4
+    - r-rlang >=1.1.6
+    - r-rle >=0.10.0
+    - r-statnet.common >=4.12.0
+    - r-tibble >=3.3.0
 
 test:
   commands:
